objects/Billboard_Invoice__c/Billboard_Invoice__c.object-meta.xml
<CustomObject>
    <description>This is Billboard invoice object. It is child object of Billboard.</description>
    <label>Billboard Invoice</label>
    <nameField>
        <label>BB Invoice #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billboard Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>