objects/Billboard_Invoice__c/fields/BB_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>BB_Invoice_Amount__c</fullName>
    <label>BB Invoice Amount</label>
    <summarizedField>Billboard_Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Billboard_Invoice_Line_Item__c.Billboard_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>