objects/Billboard_Invoice__c/fields/BB_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BB_Invoice_Due_Date__c</fullName>
    <label>BB Invoice Due Date</label>
    <type>Date</type>
</CustomField>