objects/Billboard_Invoice__c/fields/Billboard__c.field-meta.xml
<CustomField>
    <fullName>Billboard__c</fullName>
    <label>Billboard #</label>
    <referenceTo>Billboard__c</referenceTo>
    <relationshipLabel>Billboard Invoices</relationshipLabel>
    <relationshipName>Billboard_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>