objects/Billboard_Invoice__c/fields/Billboard_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billboard Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Billboard Invoices</relationshipLabel>
    <relationshipName>Billboard_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>